# ledger

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  pyproject.toml
app/ledger_backend/: __init__.py  __main__.py  api.py  coach.py  db.py  ingestion.py  repository.py
backend/: __main__.py  analyst.py  api.py  coach.py  db.py  exercise_generation.py  exercise_templates.py  extraction.py  hooks.py  ingestion.py  pseudocode.py  repository.py  sandbox.py  verifier.py
backend/fixtures/: demo_seed.json
backend/fixtures/hero_repo/: .gitignore  README.md  app.py  pyproject.toml
backend/fixtures/hero_repo/retrieval/: __init__.py  context.py  models.py  pipeline.py  rerank.py  store.py
backend/fixtures/hero_repo/tests/: test_api.py  test_context.py  test_pipeline.py  test_rerank.py
backend/tests/: conftest.py  test_analyst.py  test_api.py  test_backend_contract.py  test_coach.py  test_extraction.py  test_ingestion.py  test_repository.py  test_verifier.py
docs/adr/: 0001-dual-provider-ingestion-claude-native-spine.md  0002-agentic-topic-discovery-deterministic-verification.md  0003-idempotent-worklist-reconciliation.md  0004-drop-codex-single-provider-selectable-coach-model.md
docs/agents/: domain.md
docs/planning/: backend-topic-initialization-note.md  build-plan.md  product.md  ui-spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  adapt.js  adapt.ts  api.js  api.ts  coachmd.jsx  coachmd.tsx  main.tsx  (+8 more)
tests/: test_api.py  test_backend_contract.py  test_coach.py  test_repository.py
(+9 files in other folders)
