[project]
name = "ledger"
version = "0.1.0"
description = "Local ownership checks for AI-assisted code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.28",
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["backend"]
include-package-data = true

[tool.setuptools.package-data]
backend = ["fixtures/hero_repo/**/*.py"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
